Bugfix/ETSL-166 alignment issues is fixed
Bugfix/ETSL-166 alignment issues is fixed

--- a/ui.frontend/src/main/webpack/etisalat/styles/regional_cards.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/regional_cards.scss
@@ -19,7 +19,7 @@
 .promo-card .promo-card-section .cmp-teaser__action-link:before {
 	-webkit-transform: translateY(-50%) rotate(45deg);
 	left: 139px;
-	margin-top: 12px;
+	margin-top: 10px;
 	border-top: 1px solid #fff;
 	border-right: 1px solid #fff;
 	padding: 4px;
@@ -162,6 +162,7 @@
 		font-size: .875rem;
 		line-height: 1.25rem;
 		letter-spacing: 2px;
+     @include font-family-lato;
 		color: #fff;
 	}
 	.cmp-teaser__action-container a:hover {
@@ -170,7 +171,7 @@
 	.cmp-teaser__action-link:before {
 		-webkit-transform: translateY(-50%) rotate(45deg);
 		left: 155px;
-		margin-top: 12px;
+		margin-top: 10px;
 		border-top: 1px solid #fff;
 		border-right: 1px solid #fff;
 		padding: 3px;
@@ -230,12 +231,12 @@
 		}
 		.cmp-teaser__title {
 			margin: 0;
-			font-size: $font40;
+			font-size: $font36;
 			padding-top: $font24;
 			a, a:hover {
 				color: $white;
 			}
-		}
+		
 		.aem-GridColumn--default--3 {
 			.cmp-teaser__content {
 				padding: $font24;
@@ -338,6 +339,9 @@
 			margin-bottom: $font14;
 			.cmp-teaser__content {
 				padding: $font16;
+				h1{
+					color: $white;
+				}
 				.cmp-teaser__title {
 					font-size: $font22;
 					margin: 0;
